(gilbertt)

Don't kill meeeee!

;)

People keep asking for this, so I added an option to "Focus Settings",
called "Show sticky windows in focus list". Its selected by default, but if
you deselect it, your ALT+TAB list won't show sticky windows. Keeps loggers
and gkrellm etc out of it...

Feel free to revert the commit if it's inappropriate...


-------------------------------------------------------------------------------

Mon Feb 21 20:46:52 GMT 2000
(gilbertt)

Added winops commands/remember options/action definitions for skipping
focus, skipping tasklist, skipping winlist.

The second two work well. skipfocus is not thoroughly implemented in the e
code, ie. you can still focus =) I'm about to go through and add some logic
for that... Then I was gonna make non-ALT button clicks on skip_focus
windows bring up root menus...

Lots of changes, so check for bugs =)


-------------------------------------------------------------------------------

Mon Feb 21 21:48:34 GMT 2000
(gilbertt)

Warning removal. I was a bad boy.


-------------------------------------------------------------------------------

Mon Feb 21 21:50:20 GMT 2000
(gilbertt)

and this.


-------------------------------------------------------------------------------

Sun Feb 27 14:55:54 GMT 2000
(gilbertt)

Modified the ipc remember command. It is compatible with the old one
however.

Originally, you'd do:
remember windowid sticky
remember windowid command
remember windowid size
etc

Now you can also do:
remember windowid sticky command size ...

This streamlines epplets in particular, and speeds up Epplet_remember by a
factor of 8. (Significant on certain boxen).


-------------------------------------------------------------------------------

Sun Feb 27 15:39:37 GMT 2000
(gilbertt)

*cough*. Now the remember ipc should actually *work*. Sorry ;)


-------------------------------------------------------------------------------

Sun Feb 27 15:54:11 GMT 2000
(gilbertt)

remove a debugging printf
