@@ -171,16 +171,14 @@ ADD_MENU_TEXT_ITEM("Raise",                       __A_RAISE,      "")
 ADD_MENU_TEXT_ITEM("Lower",                       __A_LOWER,      "")
 ADD_MENU_TEXT_ITEM("Shade/Unshade",               __A_SHADE,      "")
 ADD_MENU_TEXT_ITEM("Stick/Unstick",               __A_STICK,      "")
-ADD_MENU_TEXT_ITEM("Toggle Skip Focus",           __A_SKIPFOCUS,  "")
-ADD_MENU_TEXT_ITEM("Toggle Skip Tasklist",        __A_SKIPTASK,   "")
-ADD_MENU_TEXT_ITEM("Toggle Skip Winlist",         __A_SKIPWINLIST,"")
-/* ADD_MENU_TEXT_ITEM("Toggle Never Focus",          __A_NEVERFOCUS ,"") */
+ADD_MENU_TEXT_ITEM("Toggle Skip Window Lists",     __A_SKIPLISTS,  "")
+/* ADD_MENU_TEXT_ITEM("Toggle Never Focus",       __A_NEVERFOCUS ,"") */
 ADD_MENU_TEXT_ITEM("Remember...",                 __A_SNAPSHOT,   "dialog")
-ADD_MENU_SUBMENU_TEXT_ITEM("Window Groups",        "WINOPS_GROUP")
+ADD_MENU_SUBMENU_TEXT_ITEM("Window Groups",       "WINOPS_GROUP")
 ADD_MENU_SUBMENU_TEXT_ITEM("Window Size",         "WINOPS_SIZE")
 ADD_MENU_SUBMENU_TEXT_ITEM("Set Stacking",        "WINOPS_LAYER")
 ADD_MENU_SUBMENU_TEXT_ITEM("Set Border Style",    "WINOPS_BORDERS")
-/*ADD_MENU_SUBMENU_TEXT_ITEM("Remember State",      "WINOPS_SNAP")*/
+/*ADD_MENU_SUBMENU_TEXT_ITEM("Remember State",    "WINOPS_SNAP")*/
 END_MENU
 
 /* Also available macros:
